--- a/Labo_2/src/log-635_labo_2_eqA.ipynb
+++ b/Labo_2/src/log-635_labo_2_eqA.ipynb
@@ -1032,6 +1032,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "33952662",
+   "metadata": {},
+   "source": [
+    "Dans l'optique de tester la scalabilité de notre modèle, on prend des statistiques avec un ensemble de données plus petit de 80%, 60%, 40%, 20%"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e03bda3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nn.train(Xtrain, ytrain, Xvalid, yvalid)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "5137d733",
