--- a/Labo_2/src/log-635_labo_2_eqA.ipynb
+++ b/Labo_2/src/log-635_labo_2_eqA.ipynb
@@ -79,8 +79,12 @@
     "from pathlib import Path\n",
     "import sys\n",
     "\n",
-    "src_root = str(Path(sys.path[0], '..').resolve())\n",
-    "print(src_root)"
+    "# Des constantes qui représentent les différents chemins de dossiers utilisés plus loin\n",
+    "lab_root = str(Path(sys.path[0], '..').resolve()).replace('\\\\', '/') + '/'\n",
+    "data_dir = lab_root + 'data/'\n",
+    "export_folder =  lab_root + 'output/'\n",
+    "clean_data_folder = export_folder + 'clean/'\n",
+    "error_data_folder = export_folder + 'error/'"
    ]
   },
   {
