--- a/Labo_2/src/log-635_labo_2_eqA.ipynb
+++ b/Labo_2/src/log-635_labo_2_eqA.ipynb
@@ -1050,7 +1050,109 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nn.train(Xtrain, ytrain, Xvalid, yvalid)"
+    "import math\n",
+    "def limit_set(lst, factor):\n",
+    "    len_list = lst.shape[0]\n",
+    "    return lst[:math.floor(factor * len_list)]\n",
+    "\n",
+    "# 80 %\n",
+    "\n",
+    "nn.train(limit_set(Xtrain, .8), limit_set(ytrain, .8), limit_set(Xvalid, .8), limit_set(yvalid, .8))\n",
+    "\n",
+    "# Predict\n",
+    "y_pred_my_nn_80 = nn.predict(Xtest)\n",
+    "\n",
+    "# accuracy: (tp + tn) / (fp + fn)\n",
+    "accuracy_my_nn_80 = accuracy_score(ytest.argmax(axis=1), ytest_pred.argmax(axis=1))\n",
+    "# precision tp / (tp + fp)\n",
+    "precision_my_nn_80 = precision_score(y_test, y_pred_my_nn_80, average='macro', zero_division=0)\n",
+    "print('Precision: %f' % precision_my_nn_80, '\\n')\n",
+    "# recall: tp / (tp + fn)\n",
+    "recall_my_nn_80 = recall_score(y_test, y_pred_my_nn_80, average='macro', zero_division=0)\n",
+    "print('Recall: %f' % recall_my_nn_80, '\\n')\n",
+    "# f1: 2 tp / (2 tp + fp + fn)\n",
+    "f1_my_nn_80 = f1_score(y_test, y_pred_my_nn_80, average='macro', zero_division=0)\n",
+    "print('F1 score: %f' % f1_my_nn_80, '\\n')\n",
+    "\n",
+    "\n",
+    "# 80 %\n",
+    "\n",
+    "nn.train(limit_set(Xtrain, .8), limit_set(ytrain, .8), limit_set(Xvalid, .8), limit_set(yvalid, .8))\n",
+    "\n",
+    "# Predict\n",
+    "y_pred_my_nn_80 = nn.predict(Xtest)\n",
+    "\n",
+    "# accuracy: (tp + tn) / (fp + fn)\n",
+    "accuracy_my_nn_80 = accuracy_score(ytest.argmax(axis=1), ytest_pred.argmax(axis=1))\n",
+    "# precision tp / (tp + fp)\n",
+    "precision_my_nn_80 = precision_score(y_test, y_pred_my_nn_80, average='macro', zero_division=0)\n",
+    "print('Precision: %f' % precision_my_nn_80, '\\n')\n",
+    "# recall: tp / (tp + fn)\n",
+    "recall_my_nn_80 = recall_score(y_test, y_pred_my_nn_80, average='macro', zero_division=0)\n",
+    "print('Recall: %f' % recall_my_nn_80, '\\n')\n",
+    "# f1: 2 tp / (2 tp + fp + fn)\n",
+    "f1_my_nn_80 = f1_score(y_test, y_pred_my_nn_80, average='macro', zero_division=0)\n",
+    "print('F1 score: %f' % f1_my_nn_80, '\\n')\n",
+    "\n",
+    "\n",
+    "# 60 %\n",
+    "\n",
+    "nn.train(limit_set(Xtrain, .6), limit_set(ytrain, .6), limit_set(Xvalid, .6), limit_set(yvalid, .6))\n",
+    "\n",
+    "# Predict\n",
+    "y_pred_my_nn_60 = nn.predict(Xtest)\n",
+    "\n",
+    "# accuracy: (tp + tn) / (fp + fn)\n",
+    "accuracy_my_nn_60 = accuracy_score(ytest.argmax(axis=1), ytest_pred.argmax(axis=1))\n",
+    "# precision tp / (tp + fp)\n",
+    "precision_my_nn_60 = precision_score(y_test, y_pred_my_nn_60, average='macro', zero_division=0)\n",
+    "print('Precision: %f' % precision_my_nn_60, '\\n')\n",
+    "# recall: tp / (tp + fn)\n",
+    "recall_my_nn_60 = recall_score(y_test, y_pred_my_nn_60, average='macro', zero_division=0)\n",
+    "print('Recall: %f' % recall_my_nn_60, '\\n')\n",
+    "# f1: 2 tp / (2 tp + fp + fn)\n",
+    "f1_my_nn_60 = f1_score(y_test, y_pred_my_nn_60, average='macro', zero_division=0)\n",
+    "print('F1 score: %f' % f1_my_nn_60, '\\n')\n",
+    "\n",
+    "\n",
+    "# 40 %\n",
+    "\n",
+    "nn.train(limit_set(Xtrain, .4), limit_set(ytrain, .4), limit_set(Xvalid, .4), limit_set(yvalid, .4))\n",
+    "\n",
+    "# Predict\n",
+    "y_pred_my_nn_40 = nn.predict(Xtest)\n",
+    "\n",
+    "# accuracy: (tp + tn) / (fp + fn)\n",
+    "accuracy_my_nn_40 = accuracy_score(ytest.argmax(axis=1), ytest_pred.argmax(axis=1))\n",
+    "# precision tp / (tp + fp)\n",
+    "precision_my_nn_40 = precision_score(y_test, y_pred_my_nn_40, average='macro', zero_division=0)\n",
+    "print('Precision: %f' % precision_my_nn_40, '\\n')\n",
+    "# recall: tp / (tp + fn)\n",
+    "recall_my_nn_40 = recall_score(y_test, y_pred_my_nn_40, average='macro', zero_division=0)\n",
+    "print('Recall: %f' % recall_my_nn_40, '\\n')\n",
+    "# f1: 2 tp / (2 tp + fp + fn)\n",
+    "f1_my_nn_40 = f1_score(y_test, y_pred_my_nn_40, average='macro', zero_division=0)\n",
+    "print('F1 score: %f' % f1_my_nn_40, '\\n')\n",
+    "\n",
+    "\n",
+    "# 20 %\n",
+    "\n",
+    "nn.train(limit_set(Xtrain, .2), limit_set(ytrain, .2), limit_set(Xvalid, .2), limit_set(yvalid, .2))\n",
+    "\n",
+    "# Predict\n",
+    "y_pred_my_nn_20 = nn.predict(Xtest)\n",
+    "\n",
+    "# accuracy: (tp + tn) / (fp + fn)\n",
+    "accuracy_my_nn_20 = accuracy_score(ytest.argmax(axis=1), ytest_pred.argmax(axis=1))\n",
+    "# precision tp / (tp + fp)\n",
+    "precision_my_nn_20 = precision_score(y_test, y_pred_my_nn_20, average='macro', zero_division=0)\n",
+    "print('Precision: %f' % precision_my_nn_20, '\\n')\n",
+    "# recall: tp / (tp + fn)\n",
+    "recall_my_nn_20 = recall_score(y_test, y_pred_my_nn_20, average='macro', zero_division=0)\n",
+    "print('Recall: %f' % recall_my_nn_20, '\\n')\n",
+    "# f1: 2 tp / (2 tp + fp + fn)\n",
+    "f1_my_nn_20 = f1_score(y_test, y_pred_my_nn_20, average='macro', zero_division=0)\n",
+    "print('F1 score: %f' % f1_my_nn_20, '\\n')"
    ]
   },
   {
