train and test time for my_nn

--- a/Labo_2/src/log-635_labo_2_eqA.ipynb
+++ b/Labo_2/src/log-635_labo_2_eqA.ipynb
@@ -966,10 +966,17 @@
     ")\n",
     "\n",
     "# Entrainement du réseau\n",
+    "train_start = time.time()\n",
     "nn.train(Xtrain, ytrain, Xvalid, yvalid)\n",
+    "train_end = time.time()\n",
+    "training_time_my_nn = train_end - train_start\n",
     "\n",
     "# On calcule l'accuracy du modèle en utilisant l'ensemble de test\n",
+    "test_start = time.time()\n",
     "ytest_pred = nn.predict(Xtest)\n",
+    "test_end = time.time()\n",
+    "testing_time_my_nn = test_end - test_start\n",
+    "\n",
     "accuracy_test = accuracy_score(ytest.argmax(axis=1), ytest_pred.argmax(axis=1))\n",
     "\n",
     "yvalid_pred = nn.predict(Xvalid)\n",
