--- a/Labo_2/src/log-635_labo_2_eqA.ipynb
+++ b/Labo_2/src/log-635_labo_2_eqA.ipynb
@@ -414,7 +414,7 @@
    "id": "b70d8e30",
    "metadata": {},
    "source": [
-    "Pour l'extraction des primitives, nous avons utiliser \"skimage\" avec les \"region properties\". Par contre, cette technique d'extraction nous permet d'avoir plus de cinquantes primitives sur chaque image. En créant un matrice de corrélation entre les différentes primitieves, nous avons réussi à chosir celles-ci qui sont le plus probables d'être utile pour la classification d'une image. L'évaluation des primitives a été réaliser avec le code suivant. Il permet d'afficher la matrice de corrélation entre deux types d'image (dans cette exemple, *Cercle2* et *Cercle5*). Le choix de ces types peut facilement être changer avec le \"path\". Aussi, il est possible d'afficher les différents graphiques entre deux primitives pour évaluer l'extranticité des résultats."
+    "Pour l'extraction des primitives, nous avons utiliser \"skimage\" avec les \"region properties\". Par contre, cette technique d'extraction nous permet d'avoir plus de cinquantes primitives sur chaque image. En créant un matrice de corrélation entre les différentes primitives, nous avons réussi à chosir celles qui sont le plus probables d'être utile pour la classification d'une image. L'évaluation des primitives a été réalisée avec le code suivant. Il permet d'afficher la matrice de corrélation entre deux types d'image (dans cette exemple, *Cercle2* et *Cercle5*). Le choix de ces types peut facilement être changer avec le \"path\". Aussi, il est possible d'afficher les différents graphiques entre deux primitives pour évaluer l'extranticité des résultats."
    ]
   },
   {
@@ -574,47 +574,19 @@
    "id": "0e81fe0a",
    "metadata": {},
    "source": [
-    "Lors de la première génération du code, nous avons inclu toutes les primtives et en observant la matrice de corrélation, nous avons éléminé les primivites qui avaient le moins d'impact sur les autres. En d'autres mots, nous avons garder les primitives qui corrélaient le mieux (qui avaient des valeurs qui se rapprochaient le plus de 1 et -1). Des observations ont été fait avec plusieurs exemples de type d'image et non seulement *Cercle2* et *Cercle5*.\n",
+    "Lors de la première génération du code, nous avons inclus toutes les primtives et en observant la matrice de corrélation, nous avons éliminé les primivites qui avaient le moins d'impact sur les autres. En d'autres mots, nous avons gardé les primitives qui corrélaient le mieux (qui avaient des valeurs qui se rapprochaient le plus de 1 et -1). Des observations ont été fait avec plusieurs exemples de type d'image et non seulement *Cercle2* et *Cercle5*.\n",
     "\n",
-    "En observant le graphique, on peut clairement voir deux groupes région distincts. Nous indiquant que les primitives testées pour cet exemple, equivalent_perimeter et perimiter, nous permette de bien différencier les formes dans les images fournis.\n",
+    "En observant le graphique, on peut clairement voir deux groupes région distincts. Nous indiquant que les primitives testées pour cet exemple, equivalent_diameter et perimiter, nous permette de bien différencier les formes dans les images fournies.\n",
     "\n",
-    "Pour le réseau de neurones, le code démontré au dessu a été adapté en une fonction pour prend en entré une image seulement et retourner les primitives des régions analyser. Les graphiques et matrice de corrélation on aussi été retirés, car ils n'ont plus d'utiliter dans cette section."
+    "Pour le réseau de neurones, le code démontré au dessu a été adapté en une fonction qui prends en entrée une image seulement et retourne les primitives des régions analysées. Les graphiques et matrice de corrélation on aussi été retirés, car ils n'ont plus d'utilité dans cette section."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1050578e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 23.0 -> 23.0.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: scikit-image in c:\\users\\damie\\appdata\\roaming\\python\\python310\\site-packages (0.20.0)\n",
-      "Requirement already satisfied: numpy>=1.21.1 in c:\\users\\damie\\appdata\\roaming\\python\\python310\\site-packages (from scikit-image) (1.23.4)\n",
-      "Requirement already satisfied: networkx>=2.8 in c:\\users\\damie\\appdata\\roaming\\python\\python310\\site-packages (from scikit-image) (3.0)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\damie\\appdata\\roaming\\python\\python310\\site-packages (from scikit-image) (23.0)\n",
-      "Requirement already satisfied: lazy_loader>=0.1 in c:\\users\\damie\\appdata\\roaming\\python\\python310\\site-packages (from scikit-image) (0.1)\n",
-      "Requirement already satisfied: scipy>=1.8 in c:\\users\\damie\\appdata\\roaming\\python\\python310\\site-packages (from scikit-image) (1.9.2)\n",
-      "Requirement already satisfied: tifffile>=2019.7.26 in c:\\users\\damie\\appdata\\roaming\\python\\python310\\site-packages (from scikit-image) (2023.2.28)\n",
-      "Requirement already satisfied: PyWavelets>=1.1.1 in c:\\users\\damie\\appdata\\roaming\\python\\python310\\site-packages (from scikit-image) (1.4.1)\n",
-      "Requirement already satisfied: pillow>=9.0.1 in c:\\users\\damie\\appdata\\roaming\\python\\python310\\site-packages (from scikit-image) (9.2.0)\n",
-      "Requirement already satisfied: imageio>=2.4.1 in c:\\users\\damie\\appdata\\roaming\\python\\python310\\site-packages (from scikit-image) (2.26.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install scikit-image\n",
     "\n",
@@ -729,6 +701,33 @@
    ],
    "source": [
     "solo_features('../output/augmented/Cercles/Cercle5/1_Cercle5_90.jpg')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ddb87606",
+   "metadata": {},
+   "source": [
+    "Les primitives peuvent être ajoutées à chaque exemple de données. Pour ce faire il faut modifier le code qui crée le réseau de neurones comme suit :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23377ce1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = map(solo_features, files)\n",
+    "\n",
+    "nn = NeuralNetwork(\n",
+    "  nb_input_nodes=40*40 + len(features),\n",
+    "  nb_hidden_nodes=100,\n",
+    "  nb_output_nodes=8,\n",
+    "  learning_rate=0.001,\n",
+    "  epochs=120\n",
+    ")"
    ]
   },
   {
@@ -6186,7 +6185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.9.5"
   },
   "vscode": {
    "interpreter": {
