--- a/Labo_2/src/log-635_labo_2_eqA.ipynb
+++ b/Labo_2/src/log-635_labo_2_eqA.ipynb
@@ -733,6 +733,15 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "66bbe9c7",
+   "metadata": {},
+   "source": [
+    "Malheureusement, le temps requis pour refaire tout le processus d'optimisation des hyperparamètres, nous a empêché d'intégrer ces primitives à notre modèle final. C'est cette implémentation du réseau neuronal qui est présenté à la section suivante."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "429515fc",
    "metadata": {},
    "source": [
