--- a/Labo_2/src/log-635_labo_2_eqA.ipynb
+++ b/Labo_2/src/log-635_labo_2_eqA.ipynb
@@ -11,7 +11,7 @@
     "Session HIVER 2023  \n",
     "  \n",
     "  \n",
-    "**Membres :**  \n",
+    "**Equipe A :**  \n",
     "Juneau Bélanger  \n",
     "Victor St-Louis  \n",
     "Damien Desvent  "
